--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -28,3 +28,24 @@ body {
     width: 100px;
     height: 130px;
   }
+
+.alert-box{
+  opacity: 0%;
+  position: absolute;
+  bottom: 0%;
+  left: 50%;
+  transform: translateX(-50%);
+  min-width: 500px;
+  max-width: 90%;
+  width: auto;
+  height: auto;
+  padding: 10px;
+  text-transform: capitalize;
+  background: rgb(255, 119, 119);
+  border-radius: 10px;
+  color: #fff;
+  font-family: 'roboto', sans-serif;
+  text-align: center;
+  transition: 1s;
+  border: 3px solid white;
+}
