--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/stylesheets/styles.css">
+    <link rel="stylesheet" href="/stylesheets/homePage.css">
     <title>Matala4</title>
 </head>
 <body>
     <br>
     <%- include('../partials/header.ejs') %>
-    <%- include('../partials/errormessage.ejs') %>
+    <%-// include('../partials/errormessage.ejs') %>
     <%- body %>
     <br>
 
