--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,9 +1,12 @@
 <header>
     <nav>
-        <a href="/">FIFA</a>
         <ul>
-            <li><a href="/players">Players</a></li>
-            <li><a href="/players/new">New Player</a></li>
+            <div style="text-align: center;  ">
+                <img src="C:\Users\zakay\OneDrive\תמונות\flight-search-726x400.jpg" style="width: 200px;height: 110px;border-top: 400px;">
+                <label style= "color:blue; font-size: 80px;"> EL </label>
+                <label style="color: rgb(0, 225, 255);font-size: 80px;"> AL </label>
+                <label style="color: rgb(128, 128, 128); font-size: 80px;"> AIRLINES </label>
+            </div>
         </ul>
     </nav>
 </header>
