--- a/views/homePage/dashBoard.ejs
+++ b/views/homePage/dashBoard.ejs
@@ -1,69 +1,37 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="../../public/stylesheets/homePage.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/homePage.css">
+    <title>Airline Company</title>
 </head>
 <body>
-<div style="text-align: center;"><label style="font-size: 30px;" > Welcome!</label></div>
-<div class="container text-center">
-    <div class="row">
-        <div class="col">
-            <div class="card" style="width: 18rem; height: 220px;">
-                <div class="card-body">
-                    <h5 class="card-title" style="color:blue">Flights</h5>
-                    <p class="card-text"><img src="C:\Users\zakay\OneDrive\תמונות\plane.png" class="card-img-top" alt="" style="width: 150px; height: 100px;"></p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                    <h5 class="card-title" style="color:rgb(0, 225, 255);">Orders</h5>
-                    <p class="card-text"> <img src="C:\Users\zakay\OneDrive\תמונות\Orders.png" class="card-img-top" alt="" style="width: 200px;"></p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                    <h5 class="card-title" style="color: gray;">Passengers</h5>
-                    <p class="card-text"> <img src="C:\Users\zakay\OneDrive\תמונות\passengers.png" class="card-img-top" alt="" style="height: 100px; width: 150px;"></p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-        </div>
-    </div>
-    &nbsp;
-    &nbsp;
-    <div class="row">
-        <div class="col">
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                    <h5 class="card-title" style="color: blue;">Customers</h5>
-                    <p class="card-text"><img src="C:\Users\zakay\OneDrive\תמונות\Customers.png" class="card-img-top" alt=""  style="height: 100px; width: 150px;"></p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                    <h5 class="card-title" style="color:rgb(0, 225, 255);">Employees</h5>
-                    <p class="card-text"> <img src="C:\Users\zakay\OneDrive\תמונות\employees.jpg" class="card-img-top" alt="" style="height: 100px; width: 150px;"></p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                    <b class="card-text" style="font-size: 20px;">Thank you for choosing to fly with us!</b>
-                    &nbsp;
-                    <a href="#" class="btn btn-primary">Logout</a>
-                </div>
-            </div>
-        </div>
-    </div>
+<div class="wrapper">
+
+<div class="main-content">
+    <header class="header">
+        <h1>Welcome to Our Airline</h1>
+    </header>
+    <section class="promo">
+        <h2>Discover Our Special Offers</h2>
+        <p>Check out our latest flight deals and discounts to save on your next adventure!</p>
+    </section>
+    <section class="destinations">
+        <h2>Popular Destinations</h2>
+        <!-- Add destination cards or content here -->
+    </section>
+    <section class="travel-info">
+        <h2>Travel Information</h2>
+        <p>Find important information about baggage, check-in, and other travel requirements.</p>
+    </section>
+    <footer class="footer">
+        <p>&copy; 2023 Airline Company. All rights reserved.</p>
+    </footer>
+</div>
+</div>
+<script>
+</script>
 </body>
 </html>
+
