--- a/views/login/index.ejs
+++ b/views/login/index.ejs
@@ -14,7 +14,7 @@
 </div>
 
 <div class="form">
-    <h1 class="heading">login</h1>
+    <h1 class="heading">auth</h1>
     <input type="email" placeholder="email" autocomplete="off" class="email" required>
     <input type="password" placeholder="password" autocomplete="off" class="password" required>
     <button class="submit-btn">log in</button>
