--- a/views/homePage/dashBoard.ejs
+++ b/views/homePage/dashBoard.ejs
@@ -7,6 +7,8 @@
     <title>Airline Company</title>
 </head>
 <body>
+<%- include('../partials/sideBar.ejs') %>
+
 <div class="wrapper">
 
 <div class="main-content">
