--- a/views/flights/allFlights.ejs
+++ b/views/flights/allFlights.ejs
@@ -19,8 +19,8 @@
     <div class="modal-content">
         <form id="create_flight_form">
 
-        <label for="flightID">Flight ID:</label>
-        <input type="number" id="flightID" name="flightID" required minlength="9" maxlength="9"><br>
+        <label for="flightNumber">Flight Number:</label>
+        <input type="number" id="flightNumber" name="flightNumber"><br>
 
         <label for="flightDate">Flight Date:</label>
         <input type="date" id="flightDate" name="flightDate" value="<%= new Date().toISOString().slice(0, 10) %>" required><br>
@@ -60,7 +60,10 @@
         <form id="edit_flight_form">
 
             <label for="flightID">Flight ID:</label>
-            <input type="number" id="eflightID" name="flightID" required minlength="9" maxlength="9"><br>
+            <input type="text" id="eflightID" name="flightID" readonly><br>
+
+            <label for="flightNumber">Flight Number:</label>
+            <input type="number" id="eflightNumber" name="flightNumber" required minlength="9" maxlength="9"><br>
 
             <label for="flightDate">Flight Date:</label>
             <input type="date" id="eflightDate" name="flightDate" value="<%= new Date().toISOString().slice(0, 10) %>" required><br>
@@ -119,7 +122,7 @@
         <tbody id="flightList">
         <% flights.forEach(function(flight) { %>
             <tr>
-                <td><%= flight.flightID %></td>
+                <td><%= flight.flightNumber %></td>
                 <td><%= flight.flightDate %></td>
                 <td><%= flight.hour %></td>
                 <td><%= flight.Gate %></td>
@@ -132,7 +135,7 @@
                 <td>
                     <%if(isAdmin){%>
                         <button class="editFlight" data-flightid="<%= flight._id %>"
-                                data-flightactualid="<%= flight.flightID %>"
+                                data-flightnumber="<%= flight.flightNumber %>"
                                 data-flightdate="<%= flight.flightDate %>"
                                 data-hour="<%= flight.hour %>"
                                 data-gate="<%= flight.Gate %>"
