--- a/views/homePage/dashBoard.ejs
+++ b/views/homePage/dashBoard.ejs
@@ -1,37 +1,237 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <head>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/stylesheets/homePage.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <style>
+      .graph-container {
+        width: 500px;
+        height: 500px;
+      }
+    </style>
+</head>
     <title>Airline Company</title>
+    <style>
+    body {
+        background-image: url("https://images1.ynet.co.il/PicServer5/2019/02/07/9051762/90517240990100980654no.jpg");
+        background-size: cover;
+    }
+</style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
-<%- include('../partials/sideBar.ejs') %>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
-<div class="wrapper">
 
-<div class="main-content">
-    <header class="header">
-        <h1>Welcome to Our Airline</h1>
-    </header>
-    <section class="promo">
-        <h2>Discover Our Special Offers</h2>
-        <p>Check out our latest flight deals and discounts to save on your next adventure!</p>
-    </section>
-    <section class="destinations">
-        <h2>Popular Destinations</h2>
-        <!-- Add destination cards or content here -->
-    </section>
-    <section class="travel-info">
-        <h2>Travel Information</h2>
-        <p>Find important information about baggage, check-in, and other travel requirements.</p>
-    </section>
-    <footer class="footer">
-        <p>&copy; 2023 Airline Company. All rights reserved.</p>
-    </footer>
-</div>
-</div>
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand"> <img src="https://www.easygo.co.il/clients/easygo/gallery/airlines/elal_756_500.jpg" style="width: 110px; height: 45px;"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="/flights">Flights</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Orders</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Members</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <header>
+    <nav>
+        <ul>
+            <div style="text-align: center;  ">
+                <label style= "font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; color:bisque; font-size: 80px; "> ELAL AIRLINES 
+                    <svg  style= "color:darkslategrey" xmlns="http://www.w3.org/2000/svg" width="80" height="80" fill="currentColor" class="bi bi-airplane" viewBox="0 0 16 16">
+                        <path d="M6.428 1.151C6.708.591 7.213 0 8 0s1.292.592 1.572 1.151C9.861 1.73 10 2.431 10 3v3.691l5.17 2.585a1.5 1.5 0 0 1 .83 1.342V12a.5.5 0 0 1-.582.493l-5.507-.918-.375 2.253 1.318 1.318A.5.5 0 0 1 10.5 16h-5a.5.5 0 0 1-.354-.854l1.319-1.318-.376-2.253-5.507.918A.5.5 0 0 1 0 12v-1.382a1.5 1.5 0 0 1 .83-1.342L6 6.691V3c0-.568.14-1.271.428-1.849Zm.894.448C7.111 2.02 7 2.569 7 3v4a.5.5 0 0 1-.276.447l-5.448 2.724a.5.5 0 0 0-.276.447v.792l5.418-.903a.5.5 0 0 1 .575.41l.5 3a.5.5 0 0 1-.14.437L6.708 15h2.586l-.647-.646a.5.5 0 0 1-.14-.436l.5-3a.5.5 0 0 1 .576-.411L15 11.41v-.792a.5.5 0 0 0-.276-.447L9.276 7.447A.5.5 0 0 1 9 7V3c0-.432-.11-.979-.322-1.401C8.458 1.159 8.213 1 8 1c-.213 0-.458.158-.678.599Z"/>
+                      </svg> </label>
+           
+            </div>
+        </ul>
+    </nav>
+</header>
+<div class="container text-center">
+    <div class="row">
+      <div class="col">
+        <b><h4 style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-airplane-fill" viewBox="0 0 16 16">
+            <path d="M6.428 1.151C6.708.591 7.213 0 8 0s1.292.592 1.572 1.151C9.861 1.73 10 2.431 10 3v3.691l5.17 2.585a1.5 1.5 0 0 1 .83 1.342V12a.5.5 0 0 1-.582.493l-5.507-.918-.375 2.253 1.318 1.318A.5.5 0 0 1 10.5 16h-5a.5.5 0 0 1-.354-.854l1.319-1.318-.376-2.253-5.507.918A.5.5 0 0 1 0 12v-1.382a1.5 1.5 0 0 1 .83-1.342L6 6.691V3c0-.568.14-1.271.428-1.849Z"/>
+          </svg> YOUR NEXT ADVENTURE</h4></b>
+        <label>The most popular destinations</label> <label>in 2023 </label>
+        <div id="carouselExampleDark" class="carousel carousel-dark slide" style="height: 250px;width: 250px;">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 4"></button>
+              <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="4" aria-label="Slide 5"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-bs-interval="10000">
+                <img src="https://www.skideal.co.il/app/uploads/2020/06/Rome-e1591105892246.jpg" class="d-block w-100" style="width: 250px;height: 250px;;">
+                <div class="carousel-caption d-none d-md-block">
+                  <p style="color: white;">Rome,Italy</p>
+                </div>
+              </div>
+              <div class="carousel-item" data-bs-interval="2000">
+                <img src="https://cms-b-assets.familysearch.org/dims4/default/92f0f61/2147483647/strip/true/crop/750x500+0+0/resize/1240x827!/quality/90/?url=https%3A%2F%2Ffamilysearch-brightspot.s3.amazonaws.com%2Fcb%2F2b%2Fab7608ce1f477c824c31846ed2f3%2Feiffel-tower-sunrise.jpg" class="d-block w-100" style="width: 250px;height: 250px;;">
+                <div class="carousel-caption d-none d-md-block">
+                  <p style="color: white;">Paris,France</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="https://www.state.gov/wp-content/uploads/2022/01/shutterstock_248799484-scaled.jpg" class="d-block w-100" style="width: 250px;height: 250px;;">
+                <div class="carousel-caption d-none d-md-block">
+                  <p style="color: white;">New York,USA</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="https://www.thetimes.co.uk/travel/wp-content/uploads/sites/6/2022/05/HERO_Thai-traditional-wooden-longtail-boat-and-beautiful-sand-Railay-Beach-in-Krabi-province.-Ao-Nang-Thailand_Credit_GettyImages-1011241694.jpg?w=2200&h=880&crop=1" class="d-block w-100" style="width: 250px;height: 250px;;">
+                <div class="carousel-caption d-none d-md-block">
+                  <p style="color: white;">Thailand</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="https://www.intrepidtravel.com/adventures/wp-content/uploads/2017/08/china_shanghai_yuyuan-garden-city.jpg" class="d-block w-100" style="width: 250px;height: 250px;;">
+                <div class="carousel-caption d-none d-md-block">
+                  <p style="color: white;">China</p>
+                </div>
+              </div>
+            </div>
+
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+      </div>
+      &nbsp;	
+      &nbsp;	
+      &nbsp;	
+      &nbsp;	
+      &nbsp;	
+      &nbsp;	
+      &nbsp;	
+      &nbsp;	
+      &nbsp;	
+      &nbsp;	
+      &nbsp;	
+      &nbsp;	
+      &nbsp;	
+      &nbsp;	
+      &nbsp;
+      <div class="col">
+        <b><h4 style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-airplane-fill" viewBox="0 0 16 16">
+            <path d="M6.428 1.151C6.708.591 7.213 0 8 0s1.292.592 1.572 1.151C9.861 1.73 10 2.431 10 3v3.691l5.17 2.585a1.5 1.5 0 0 1 .83 1.342V12a.5.5 0 0 1-.582.493l-5.507-.918-.375 2.253 1.318 1.318A.5.5 0 0 1 10.5 16h-5a.5.5 0 0 1-.354-.854l1.319-1.318-.376-2.253-5.507.918A.5.5 0 0 1 0 12v-1.382a1.5 1.5 0 0 1 .83-1.342L6 6.691V3c0-.568.14-1.271.428-1.849Z"/>
+          </svg> THE BEST EXPERINCE WITH ELAL</h4></b>
+          <label>click here for watching</label>
+        <iframe width="250" height="250" src="https://www.youtube.com/embed/4L51lRjDgpE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      </div>
+      &nbsp;	
+      &nbsp;	
+      &nbsp;	
+      &nbsp;	
+      &nbsp;	
+      &nbsp;	
+      &nbsp;	
+      &nbsp;	
+      &nbsp;	
+      &nbsp;	
+      &nbsp;	
+      &nbsp;	
+      &nbsp;	
+      &nbsp;	
+      &nbsp;
+      <div class="col" style="text-align: center;">
+        <b><h4 style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-airplane-fill" viewBox="0 0 16 16">
+            <path d="M6.428 1.151C6.708.591 7.213 0 8 0s1.292.592 1.572 1.151C9.861 1.73 10 2.431 10 3v3.691l5.17 2.585a1.5 1.5 0 0 1 .83 1.342V12a.5.5 0 0 1-.582.493l-5.507-.918-.375 2.253 1.318 1.318A.5.5 0 0 1 10.5 16h-5a.5.5 0 0 1-.354-.854l1.319-1.318-.376-2.253-5.507.918A.5.5 0 0 1 0 12v-1.382a1.5 1.5 0 0 1 .83-1.342L6 6.691V3c0-.568.14-1.271.428-1.849Z"/>
+          </svg> ABOUT US</h4></b>
+          <label> for more information about the company: </label>
+
+          <div class="card shadow-2-strong card-registration" style="text-align: center; border-radius: 0px ;background-size: cover; background-image: url(https://images1.calcalist.co.il/PicServer3/2018/08/23/841870/shutterstock_553131187_lm.jpg); background-color:bisque; width: 250PX; height: 250px;  ">
+           <b> <p style="font-size: 12px; color:bla"> El Al Airlines, commonly referred to as El Al, is the flag carrier of Israel. Founded in 1948, El Al is headquartered in Tel Aviv and operates flights to over 50 destinations worldwide, including Europe, North America, Asia, Africa, and the Middle East.
+              El Al is known for its high level of security measures and has a reputation as one of the world's most secure airlines. Its security protocols include armed guards on flights, reinforced cockpit doors, and extensive baggage screening.</p></b>
+      </div>
+      </div>
+      <div class="col" style=>
+        <%if(isAdmin){%>
+          <b><h4 style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-airplane-fill" viewBox="0 0 16 16">
+            <path d="M6.428 1.151C6.708.591 7.213 0 8 0s1.292.592 1.572 1.151C9.861 1.73 10 2.431 10 3v3.691l5.17 2.585a1.5 1.5 0 0 1 .83 1.342V12a.5.5 0 0 1-.582.493l-5.507-.918-.375 2.253 1.318 1.318A.5.5 0 0 1 10.5 16h-5a.5.5 0 0 1-.354-.854l1.319-1.318-.376-2.253-5.507.918A.5.5 0 0 1 0 12v-1.382a1.5 1.5 0 0 1 .83-1.342L6 6.691V3c0-.568.14-1.271.428-1.849Z"/>
+          </svg>  Flights Graph </h4></b>
+          <div class="graph-container">
+            <canvas id="myChart"></canvas>
+          </div>
+          <script>
+var ctx = document.getElementById('myChart').getContext('2d');
+var myChart = new Chart(ctx, {
+    type: 'bar',
+    data: {
+     
+        labels: ['Novembar', 'December', 'Janurary', 'Feburary', 'March', 'april'],
+        datasets: [{
+            label: 'number of flight  in the past 6 months',
+            data: [52233100,30031230, 39231283, 42425213, 62132292, 32321423],
+            backgroundColor: [
+                'rgba(255, 99, 132, 0.2)',
+                'rgba(54, 162, 235, 0.2)',
+                'rgba(255, 206, 86, 0.2)',
+                'rgba(75, 192, 192, 0.2)',
+                'rgba(153, 102, 255, 0.2)',
+                'rgba(255, 159, 64, 0.2)'
+            ],
+            borderColor: [
+                'rgba(255, 99, 132, 1)',
+                'rgba(54, 162, 235, 1)',
+                'rgba(255, 206, 86, 1)',
+                'rgba(75, 192, 192, 1)',
+                'rgba(153, 102, 255, 1)',
+                'rgba(255, 159, 64, 1)'
+            ],
+            borderWidth: 1
+        }]
+    },
+    options: {
+        scales: {
+            yAxes: [{
+                ticks: {
+                    beginAtZero: true
+                }
+            }]
+        }
+    }
+});
+
+          </script>
+          <script type="text/javascript" src="GRAPH.js"> </script>
+        <%}%>
+      </div>	
+      &nbsp;
+      &nbsp;
+      <div class="col">
+        <b><h4 style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-airplane-fill" viewBox="0 0 16 16">
+            <path d="M6.428 1.151C6.708.591 7.213 0 8 0s1.292.592 1.572 1.151C9.861 1.73 10 2.431 10 3v3.691l5.17 2.585a1.5 1.5 0 0 1 .83 1.342V12a.5.5 0 0 1-.582.493l-5.507-.918-.375 2.253 1.318 1.318A.5.5 0 0 1 10.5 16h-5a.5.5 0 0 1-.354-.854l1.319-1.318-.376-2.253-5.507.918A.5.5 0 0 1 0 12v-1.382a1.5 1.5 0 0 1 .83-1.342L6 6.691V3c0-.568.14-1.271.428-1.849Z"/>
+          </svg> THANK YOU FOR FLYING WITH US </h4></b>
+       <button type="button" class="btn btn-outline-light">
+        <a class="flights" aria-current="page" href="/login" style="color:antiquewhite;"> back to login</a></button>
+      </div>
+    </div>
+  </div>
+
+  
 <script>
 </script>
 </body>
