Websocket integration into the flights page and fixes

--- a/views/flights/allFlights.ejs
+++ b/views/flights/allFlights.ejs
@@ -3,6 +3,8 @@
 <head>
     <title>All Flights</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
+
     <link rel="stylesheet" type="text/css"  href="/stylesheets/lists.css">
 </head>
 <body>
@@ -121,17 +123,17 @@
         </thead>
         <tbody id="flightList">
         <% flights.forEach(function(flight) { %>
-            <tr>
-                <td><%= flight.flightNumber %></td>
-                <td><%= flight.flightDate %></td>
-                <td><%= flight.hour %></td>
-                <td><%= flight.Gate %></td>
-                <td><%= flight.Destination %></td>
-                <td><%= flight.Origin %></td>
-                <td><%= flight.flightPrice %></td>
-                <td><%= flight.ArrivingDate %></td>
-                <td><%= flight.NumberOfSeats %></td>
-                <td><%= flight.ArrivingHour %></td>
+            <tr id = "flight-<%= flight._id %>">
+                <td class = "flight-number"><%= flight.flightNumber %></td>
+                <td class = "flight-date"><%= flight.flightDate %></td>
+                <td class = "flight-hour"><%= flight.hour %></td>
+                <td class = "flight-gate"><%= flight.Gate %></td>
+                <td class = "flight-destination"><%= flight.Destination %></td>
+                <td class = "flight-origin"><%= flight.Origin %></td>
+                <td class = "flight-price"><%= flight.flightPrice %></td>
+                <td class = "flight-arriving-date"><%= flight.ArrivingDate %></td>
+                <td class = "flight-number-of-seats"><%= flight.NumberOfSeats %></td>
+                <td class = "flight-arriving-hour"><%= flight.ArrivingHour %></td>
                 <td>
                     <%if(isAdmin){%>
                         <button class="editFlight" data-flightid="<%= flight._id %>"
