--- a/views/flights/allFlights.ejs
+++ b/views/flights/allFlights.ejs
@@ -4,8 +4,8 @@
     <title>All Flights</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
-
     <link rel="stylesheet" type="text/css"  href="/stylesheets/lists.css">
+    <%- include('../partials/navBar.ejs') %>
 </head>
 <body>
 <div class="sidebar">
