--- a/views/homePage/dashBoard.ejs
+++ b/views/homePage/dashBoard.ejs
@@ -25,29 +25,7 @@
 </head>
 <body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-
-
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand"> <img src="https://www.easygo.co.il/clients/easygo/gallery/airlines/elal_756_500.jpg" style="width: 110px; height: 45px;"></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="/flights">Flights</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Orders</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Members</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+<%- include('../partials/navBar.ejs') %>
   <header>
     <nav>
         <ul>
@@ -119,21 +97,6 @@
             </button>
           </div>
       </div>
-      &nbsp;	
-      &nbsp;	
-      &nbsp;	
-      &nbsp;	
-      &nbsp;	
-      &nbsp;	
-      &nbsp;	
-      &nbsp;	
-      &nbsp;	
-      &nbsp;	
-      &nbsp;	
-      &nbsp;	
-      &nbsp;	
-      &nbsp;	
-      &nbsp;
       <div class="col">
         <b><h4 style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-airplane-fill" viewBox="0 0 16 16">
             <path d="M6.428 1.151C6.708.591 7.213 0 8 0s1.292.592 1.572 1.151C9.861 1.73 10 2.431 10 3v3.691l5.17 2.585a1.5 1.5 0 0 1 .83 1.342V12a.5.5 0 0 1-.582.493l-5.507-.918-.375 2.253 1.318 1.318A.5.5 0 0 1 10.5 16h-5a.5.5 0 0 1-.354-.854l1.319-1.318-.376-2.253-5.507.918A.5.5 0 0 1 0 12v-1.382a1.5 1.5 0 0 1 .83-1.342L6 6.691V3c0-.568.14-1.271.428-1.849Z"/>
@@ -141,21 +104,6 @@
           <label>click here for watching</label>
         <iframe width="250" height="250" src="https://www.youtube.com/embed/4L51lRjDgpE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       </div>
-      &nbsp;	
-      &nbsp;	
-      &nbsp;	
-      &nbsp;	
-      &nbsp;	
-      &nbsp;	
-      &nbsp;	
-      &nbsp;	
-      &nbsp;	
-      &nbsp;	
-      &nbsp;	
-      &nbsp;	
-      &nbsp;	
-      &nbsp;	
-      &nbsp;
       <div class="col" style="text-align: center;">
         <b><h4 style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-airplane-fill" viewBox="0 0 16 16">
             <path d="M6.428 1.151C6.708.591 7.213 0 8 0s1.292.592 1.572 1.151C9.861 1.73 10 2.431 10 3v3.691l5.17 2.585a1.5 1.5 0 0 1 .83 1.342V12a.5.5 0 0 1-.582.493l-5.507-.918-.375 2.253 1.318 1.318A.5.5 0 0 1 10.5 16h-5a.5.5 0 0 1-.354-.854l1.319-1.318-.376-2.253-5.507.918A.5.5 0 0 1 0 12v-1.382a1.5 1.5 0 0 1 .83-1.342L6 6.691V3c0-.568.14-1.271.428-1.849Z"/>
