--- a/views/account/accountPreferences.ejs
+++ b/views/account/accountPreferences.ejs
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Preferences</title>
-
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
 <%- include('../partials/navBar.ejs') %>
-
 <div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-md-6">
@@ -25,7 +25,7 @@
                         </div>
                         <div class="mb-3">
                             <label for="email" class="form-label">Email</label>
-                            <input type="email" class="form-control" id="email" required value = "<%= user.id %>">
+                            <input type="email" class="form-control" id="email" required value = "<%= user.email %>">
                         </div>
                         <div class="mb-3">
                             <label for="id" class="form-label">ID</label>
@@ -33,7 +33,7 @@
                         </div>
                         <div class="mb-3">
                             <label for="birthDate" class="form-label">Birth Date</label>
-                            <input type="date" class="form-control" id="birthDate" required value = "<%= user.birthDate %>">
+                            <input type="date" class="form-control" id="birthDate" required value = "<%= new Date(user.birthDate).toISOString().slice(0, 10) %>">
                         </div>
                         <div class="mb-3">
                             <label for="phone" class="form-label">Phone</label>
@@ -50,6 +50,7 @@
         </div>
     </div>
 </div>
+<script type="text/javascript" src="../account/accountPreferences.js"></script>
 
 </body>
 </html>
