--- a/views/flights/allFlights.ejs
+++ b/views/flights/allFlights.ejs
@@ -4,6 +4,8 @@
     <title>All Flights</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
+    <script async src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=geocoding&callback=initMap" ></script>
+
     <title>Add Map</title>
         <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <style>
@@ -31,8 +33,8 @@
 
     <div class="modal-content" style="width: 500px; background-image: url(https://www.kishrey-teufa.co.il/clients/kishreyteufa/gallery/Website_General/Flights/Plane9_750520.jpg); background-size: cover;" >
         <form id="create_flight_form" style="font-family: Georgia, 'Times New Roman', Times, serif;">
-        
-        <a class="btn-close" type="button"  aria-label="Close" href="/flights" style="color:white;"> </a></button>
+
+            <a class="btn-close" type="button"  aria-label="Close" style="color:white;"> </a></button>
         <label for="flightNumber" style="text-align: left; background-color: khaki;">Flight Number:</label>
         <input type="number" id="flightNumber" name="flightNumber" style="width: 200px; background-color: white;"><br>
         
@@ -108,7 +110,7 @@
 
     <div class="modal-content"  style="width: 500px; background-image: url(https://www.kishrey-teufa.co.il/clients/kishreyteufa/gallery/Website_General/Flights/Plane9_750520.jpg); background-size: cover;">
         <form id="edit_flight_form">
-            <a class="btn-close" type="button"  aria-label="Close" href="/flights" style="color:white;"> </a></button>
+            <a class="btn-close" type="button"  aria-label="Close" style="color:white;"> </a></button>
             <label for="flightID" style="text-align: left; background-color: khaki;">Flight ID:</label>
             <input type="text" id="eflightID" name="flightID" readonly style="width: 200px; background-color: white;"><br>
 
@@ -228,7 +230,6 @@
         <div id="map"></div>
         <script>(g=>{var h,a,k,p="The Google Maps JavaScript API",c="google",l="importLibrary",q="__ib__",m=document,b=window;b=b[c]||(b[c]={});var d=b.maps||(b.maps={}),r=new Set,e=new URLSearchParams,u=()=>h||(h=new Promise(async(f,n)=>{await (a=m.createElement("script"));e.set("libraries",[...r]+"");for(k in g)e.set(k.replace(/[A-Z]/g,t=>"_"+t[0].toLowerCase()),g[k]);e.set("callback",c+".maps."+q);a.src=`https://maps.${c}apis.com/maps/api/js?`+e;d[q]=f;a.onerror=()=>h=n(Error(p+" could not load."));a.nonce=m.querySelector("script[nonce]")?.nonce||"";m.head.append(a)}));d[l]?console.warn(p+" only loads once. Ignoring:",g):d[l]=(f,...n)=>r.add(f)&&u().then(()=>d[l](f,...n))})
          ({key: "AIzaSyBSkfNxcG5hPUwz6NWGC0yhx8tcmDlXGEQ", v: "beta"});</script>
-        
          <style>
         #map {
         height: 400px; /* The height of the map */
@@ -236,6 +237,7 @@
         }
         </style>
         <script>
+
         // Initialize and add the map
         let map;
         
