--- a/views/flights/orderModal.ejs
+++ b/views/flights/orderModal.ejs
@@ -1,6 +1,6 @@
 <div id="orderModal" class="modal" style="color:black;">
 
-    <div class="modal-content"  style="width: 500px; height: 600px; background-image: url(https://www.kishrey-teufa.co.il/clients/kishreyteufa/gallery/Website_General/Flights/Plane9_750520.jpg); background-size: cover;">
+    <div class="modal-content"  style="width: 500px; height: 800px; background-image: url(https://www.kishrey-teufa.co.il/clients/kishreyteufa/gallery/Website_General/Flights/Plane9_750520.jpg); background-size: cover;">
         <form id="order_flight_form">
             <a class="btn-close" type="button"  aria-label="Close" style="color:white;"> </a></button>
 
@@ -49,8 +49,10 @@
 
             <label for="cvv" style="text-align: left; background-color: khaki;">CVV:</label>
             <input type="text" id="cvv" name="cvv" required pattern="\d{3}" title="Please enter a 3-digit CVV code" style="width: 200px; background-color: white;"><br>
+            <%- include('../flights/signatureCanvas.ejs') %>
 
             <button type="submit" id="order_flight">Order Flight</button>
         </form>
+
     </div>
 </div>
